reworked flexbox for 5-day forecast cards for better responsiveness

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           </ul>
         </div>
         <h2 id="fiveDayForecast">5-day Forecast</h2>
-        <div class="card-columns">
+        <div id="cardContainer">
           <div class="card card-body" id="forecastOne">
             <h3>00/00/0000</h3>
             <div>Icon</div>
