finished portion of getApi function that grabs and displays city's current weather

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </section>
       <section class="col-md-9">
         <div class="card card-body" id="currentCity">
-          <h2 id="cityName">City Name (00/00/0000)</h2>
+          <h2 id="cityNameDate">City Name (0000/00/00)</h2>
           <ul id="cityWeather" class="list-group-flush card-text">
             <li class="list-group-item" id="cityTemp">Temp:</li>
             <li class="list-group-item" id="cityWind">Wind:</li>
@@ -35,7 +35,7 @@
         <h2 id="fiveDayForecast">5-day Forecast</h2>
         <div id="cardContainer">
           <div class="card card-body" id="forecastOne">
-            <h3>00/00/0000</h3>
+            <h3>0000/00/00</h3>
             <div>Icon</div>
             <ul class="list-group-flush card-text">
               <li class="list-group-item" id="forecastOneTemp">Temp:</li>
@@ -43,7 +43,7 @@
               <li class="list-group-item" id="forecastOneHum">Humidity:</li>
           </div>
           <div class="card card-body" id="forecastTwo">
-            <h3>00/00/0000</h3>
+            <h3>0000/00/00</h3>
             <div>Icon</div>
             <ul class="list-group-flush card-text">
               <li class="list-group-item" id="forecastTwoTemp">Temp:</li>
@@ -51,7 +51,7 @@
               <li class="list-group-item" id="forecastTwoHum">Humidity:</li>
           </div>
           <div class="card card-body" id="forecastThree">
-            <h3>00/00/0000</h3>
+            <h3>0000/00/00</h3>
             <div>Icon</div>
             <ul class="list-group-flush card-text">
               <li class="list-group-item" id="forecastThreeTemp">Temp:</li>
@@ -59,7 +59,7 @@
               <li class="list-group-item" id="forecastThreeHum">Humidity:</li>
           </div>
           <div class="card card-body" id="forecastFour">
-            <h3>00/00/0000</h3>
+            <h3>0000/00/00</h3>
             <div>Icon</div>
             <ul class="list-group-flush card-text">
               <li class="list-group-item" id="forecastFourTemp">Temp:</li>
@@ -67,7 +67,7 @@
               <li class="list-group-item" id="forecastFourHum">Humidity:</li>
           </div>
           <div class="card card-body" id="forecastFive">
-            <h3>00/00/0000</h3>
+            <h3>0000/00/00</h3>
             <div>Icon</div>
             <ul class="list-group-flush card-text">
               <li class="list-group-item" id="forecastFiveTemp">Temp:</li>
