--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </section>
       <section class="col-md-9">
         <div class="card card-body" id="currentCity">
-          <h2 id="cityNameDate">City Name (0000/00/00)</h2>
+          <h2 id="cityNameDate">City Name (00/00/0000)</h2>
           <ul id="cityWeather" class="list-group-flush card-text">
             <li class="list-group-item" id="cityTemp">Temp:</li>
             <li class="list-group-item" id="cityWind">Wind:</li>
@@ -34,45 +34,45 @@
         </div>
         <h2 id="fiveDayForecast">5-day Forecast</h2>
         <div id="cardContainer">
-          <div class="card card-body" id="forecastOne">
-            <h3>0000/00/00</h3>
+          <div class="card card-body forecastCard" id="forecastOne">
+            <h3 id="oneDate">00/00/0000</h3>
             <div>Icon</div>
             <ul class="list-group-flush card-text">
-              <li class="list-group-item" id="forecastOneTemp">Temp:</li>
-              <li class="list-group-item" id="forecastOneWind">Wind:</li>
-              <li class="list-group-item" id="forecastOneHum">Humidity:</li>
+              <li class="list-group-item" id="oneTemp">Temp:</li>
+              <li class="list-group-item" id="oneWind">Wind:</li>
+              <li class="list-group-item" id="oneHum">Humidity:</li>
           </div>
-          <div class="card card-body" id="forecastTwo">
-            <h3>0000/00/00</h3>
+          <div class="card card-body forecastCard" id="forecastTwo">
+            <h3 id="twoDate">00/00/0000</h3>
             <div>Icon</div>
             <ul class="list-group-flush card-text">
-              <li class="list-group-item" id="forecastTwoTemp">Temp:</li>
-              <li class="list-group-item" id="forecastTwoWind">Wind:</li>
-              <li class="list-group-item" id="forecastTwoHum">Humidity:</li>
+              <li class="list-group-item" id="twoTemp">Temp:</li>
+              <li class="list-group-item" id="twoWind">Wind:</li>
+              <li class="list-group-item" id="twoHum">Humidity:</li>
           </div>
-          <div class="card card-body" id="forecastThree">
-            <h3>0000/00/00</h3>
+          <div class="card card-body forecastCard" id="forecastThree">
+            <h3 id="threeDate">00/00/0000</h3>
             <div>Icon</div>
             <ul class="list-group-flush card-text">
-              <li class="list-group-item" id="forecastThreeTemp">Temp:</li>
-              <li class="list-group-item" id="forecastThreeWind">Wind:</li>
-              <li class="list-group-item" id="forecastThreeHum">Humidity:</li>
+              <li class="list-group-item" id="threeTemp">Temp:</li>
+              <li class="list-group-item" id="threeWind">Wind:</li>
+              <li class="list-group-item" id="threeHum">Humidity:</li>
           </div>
-          <div class="card card-body" id="forecastFour">
-            <h3>0000/00/00</h3>
+          <div class="card card-body forecastCard" id="forecastFour">
+            <h3 id="fourDate">00/00/0000</h3>
             <div>Icon</div>
             <ul class="list-group-flush card-text">
-              <li class="list-group-item" id="forecastFourTemp">Temp:</li>
-              <li class="list-group-item" id="forecastFourWind">Wind:</li>
-              <li class="list-group-item" id="forecastFourHum">Humidity:</li>
+              <li class="list-group-item" id="fourTemp">Temp:</li>
+              <li class="list-group-item" id="fourWind">Wind:</li>
+              <li class="list-group-item" id="fourHum">Humidity:</li>
           </div>
-          <div class="card card-body" id="forecastFive">
-            <h3>0000/00/00</h3>
+          <div class="card card-body forecastCard" id="forecastFive">
+            <h3 id="fiveDate">00/00/0000</h3>
             <div>Icon</div>
             <ul class="list-group-flush card-text">
-              <li class="list-group-item" id="forecastFiveTemp">Temp:</li>
-              <li class="list-group-item" id="forecastFiveWind">Wind:</li>
-              <li class="list-group-item" id="forecastFiveHum">Humidity:</li>
+              <li class="list-group-item" id="fiveTemp">Temp:</li>
+              <li class="list-group-item" id="fiveWind">Wind:</li>
+              <li class="list-group-item" id="fiveHum">Humidity:</li>
           </div>
         </div>
       </section>
