got for loop to target a specific time over 5 days of the forecast data

--- a/index.html
+++ b/index.html
@@ -38,41 +38,41 @@
             <h3 id="oneDate">00/00/0000</h3>
             <div>Icon</div>
             <ul class="list-group-flush card-text">
-              <li class="list-group-item" id="oneTemp">Temp:</li>
-              <li class="list-group-item" id="oneWind">Wind:</li>
-              <li class="list-group-item" id="oneHum">Humidity:</li>
+              <li class="list-group-item">Temp:</li>
+              <li class="list-group-item">Wind:</li>
+              <li class="list-group-item">Humidity:</li>
           </div>
           <div class="card card-body forecastCard" id="forecastTwo">
             <h3 id="twoDate">00/00/0000</h3>
             <div>Icon</div>
             <ul class="list-group-flush card-text">
-              <li class="list-group-item" id="twoTemp">Temp:</li>
-              <li class="list-group-item" id="twoWind">Wind:</li>
-              <li class="list-group-item" id="twoHum">Humidity:</li>
+              <li class="list-group-item">Temp:</li>
+              <li class="list-group-item">Wind:</li>
+              <li class="list-group-item">Humidity:</li>
           </div>
           <div class="card card-body forecastCard" id="forecastThree">
             <h3 id="threeDate">00/00/0000</h3>
             <div>Icon</div>
             <ul class="list-group-flush card-text">
-              <li class="list-group-item" id="threeTemp">Temp:</li>
-              <li class="list-group-item" id="threeWind">Wind:</li>
-              <li class="list-group-item" id="threeHum">Humidity:</li>
+              <li class="list-group-item">Temp:</li>
+              <li class="list-group-item">Wind:</li>
+              <li class="list-group-item">Humidity:</li>
           </div>
           <div class="card card-body forecastCard" id="forecastFour">
             <h3 id="fourDate">00/00/0000</h3>
             <div>Icon</div>
             <ul class="list-group-flush card-text">
-              <li class="list-group-item" id="fourTemp">Temp:</li>
-              <li class="list-group-item" id="fourWind">Wind:</li>
-              <li class="list-group-item" id="fourHum">Humidity:</li>
+              <li class="list-group-item">Temp:</li>
+              <li class="list-group-item">Wind:</li>
+              <li class="list-group-item">Humidity:</li>
           </div>
           <div class="card card-body forecastCard" id="forecastFive">
             <h3 id="fiveDate">00/00/0000</h3>
             <div>Icon</div>
             <ul class="list-group-flush card-text">
-              <li class="list-group-item" id="fiveTemp">Temp:</li>
-              <li class="list-group-item" id="fiveWind">Wind:</li>
-              <li class="list-group-item" id="fiveHum">Humidity:</li>
+              <li class="list-group-item">Temp:</li>
+              <li class="list-group-item">Wind:</li>
+              <li class="list-group-item">Humidity:</li>
           </div>
         </div>
       </section>
