added JS to store current and 5day weather to local storage. Added JS to create a button for each search.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </header>
   <div class="container-fluid">
     <div class="row">
-      <section class="col-md-3">
+      <section class="col-md-3" id="searchColumn">
         <div class="form-group">
           <label for="citySearch">Search for a city:</label>
           <input type="text" placeholder="Enter city name" id="citySearch" class="form-control form-control-lg">
@@ -35,44 +35,44 @@
         <h2 id="fiveDayForecast">5-day Forecast</h2>
         <div id="cardContainer">
           <div class="card card-body forecastCard" id="forecastOne">
-            <h3>00/00/0000</h3>
+            <h3 id="dateOne">00/00/0000</h3>
             <div>Icon</div>
             <ul class="list-group-flush card-text">
-              <li class="list-group-item">Temp:</li>
-              <li class="list-group-item">Wind:</li>
-              <li class="list-group-item">Humidity:</li>
+              <li class="list-group-item" id="tempOne">Temp:</li>
+              <li class="list-group-item" id="windOne">Wind:</li>
+              <li class="list-group-item" id="humOne">Humidity:</li>
           </div>
           <div class="card card-body forecastCard" id="forecastTwo">
-            <h3>00/00/0000</h3>
+            <h3 id="dateTwo">00/00/0000</h3>
             <div>Icon</div>
             <ul class="list-group-flush card-text">
-              <li class="list-group-item">Temp:</li>
-              <li class="list-group-item">Wind:</li>
-              <li class="list-group-item">Humidity:</li>
+              <li class="list-group-item" id="tempTwo">Temp:</li>
+              <li class="list-group-item" id="windTwo">Wind:</li>
+              <li class="list-group-item" id="humTwo">Humidity:</li>
           </div>
           <div class="card card-body forecastCard" id="forecastThree">
-            <h3>00/00/0000</h3>
+            <h3 id="dateThree">00/00/0000</h3>
             <div>Icon</div>
             <ul class="list-group-flush card-text">
-              <li class="list-group-item">Temp:</li>
-              <li class="list-group-item">Wind:</li>
-              <li class="list-group-item">Humidity:</li>
+              <li class="list-group-item" id="tempThree">Temp:</li>
+              <li class="list-group-item" id="windThree">Wind:</li>
+              <li class="list-group-item" id="humThree">Humidity:</li>
           </div>
           <div class="card card-body forecastCard" id="forecastFour">
-            <h3>00/00/0000</h3>
+            <h3 id="dateFour">00/00/0000</h3>
             <div>Icon</div>
             <ul class="list-group-flush card-text">
-              <li class="list-group-item">Temp:</li>
-              <li class="list-group-item">Wind:</li>
-              <li class="list-group-item">Humidity:</li>
+              <li class="list-group-item" id="tempFour">Temp:</li>
+              <li class="list-group-item" id="windFour">Wind:</li>
+              <li class="list-group-item" id="humFour">Humidity:</li>
           </div>
           <div class="card card-body forecastCard" id="forecastFive">
-            <h3>00/00/0000</h3>
+            <h3 id="dateFive">00/00/0000</h3>
             <div>Icon</div>
             <ul class="list-group-flush card-text">
-              <li class="list-group-item">Temp:</li>
-              <li class="list-group-item">Wind:</li>
-              <li class="list-group-item">Humidity:</li>
+              <li class="list-group-item" id="tempFive">Temp:</li>
+              <li class="list-group-item" id="windFive">Wind:</li>
+              <li class="list-group-item" id="humFive">Humidity:</li>
           </div>
         </div>
       </section>
