added JS to add icons to fiveDay cards upon search

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </section>
       <section class="col-md-9">
         <div class="card card-body" id="currentCity">
-          <h2 id="cityNameDate">City Name (00/00/0000)</h2>
+          <h2 id="cityNameDate"></h2>
           <ul id="cityWeather" class="list-group-flush card-text">
             <li class="list-group-item" id="cityTemp">Temp:</li>
             <li class="list-group-item" id="cityWind">Wind:</li>
@@ -35,40 +35,40 @@
         <h2 id="fiveDayForecast">5-day Forecast</h2>
         <div id="cardContainer">
           <div class="card card-body forecastCard" id="forecastOne">
-            <h3 id="dateOne">00/00/0000</h3>
-            <div>Icon</div>
+            <h3 id="dateOne"></h3>
+            <img src="">
             <ul class="list-group-flush card-text">
               <li class="list-group-item" id="tempOne">Temp:</li>
               <li class="list-group-item" id="windOne">Wind:</li>
               <li class="list-group-item" id="humOne">Humidity:</li>
           </div>
           <div class="card card-body forecastCard" id="forecastTwo">
-            <h3 id="dateTwo">00/00/0000</h3>
-            <div>Icon</div>
+            <h3 id="dateTwo"></h3>
+            <img src="">
             <ul class="list-group-flush card-text">
               <li class="list-group-item" id="tempTwo">Temp:</li>
               <li class="list-group-item" id="windTwo">Wind:</li>
               <li class="list-group-item" id="humTwo">Humidity:</li>
           </div>
           <div class="card card-body forecastCard" id="forecastThree">
-            <h3 id="dateThree">00/00/0000</h3>
-            <div>Icon</div>
+            <h3 id="dateThree"></h3>
+            <img src="">
             <ul class="list-group-flush card-text">
               <li class="list-group-item" id="tempThree">Temp:</li>
               <li class="list-group-item" id="windThree">Wind:</li>
               <li class="list-group-item" id="humThree">Humidity:</li>
           </div>
           <div class="card card-body forecastCard" id="forecastFour">
-            <h3 id="dateFour">00/00/0000</h3>
-            <div>Icon</div>
+            <h3 id="dateFour"></h3>
+            <img src="">
             <ul class="list-group-flush card-text">
               <li class="list-group-item" id="tempFour">Temp:</li>
               <li class="list-group-item" id="windFour">Wind:</li>
               <li class="list-group-item" id="humFour">Humidity:</li>
           </div>
           <div class="card card-body forecastCard" id="forecastFive">
-            <h3 id="dateFive">00/00/0000</h3>
-            <div>Icon</div>
+            <h3 id="dateFive"></h3>
+            <img src="">
             <ul class="list-group-flush card-text">
               <li class="list-group-item" id="tempFive">Temp:</li>
               <li class="list-group-item" id="windFive">Wind:</li>
